# learn_opengl

./: .gitignore  README.md  readme.md
include/glad/: glad.h
includes/: root_directory.h
lib/: makefile
proj-1-hello-triangle/: hello.cpp  makefile  readme.md
proj-1.5-glsl/: hello.cpp  makefile  readme.md  t2.cpp  t3.cpp
proj-1.6-texture/: 1.6-texture.cpp  1.6.1-shader.fs  1.6.1-texture.cpp  1.6.2-texture.cpp  makefile  readme.md  shader.h
proj-1.8-coordinate-system/: 1.8.2-coordinate_systems.cpp  makefile  readme.md
proj-2-glsl/: makefile  readme.md  t3.cpp
proj-hello-triangle/: glad.c  hello.cpp  makefile  readme.md
proj-hw2-perspective/: hw2-perspective.cpp  hw2-perspective.vs  hw2-the-first-opengl.cpp  makefile  readme.md
proj-hw2-perspective/report/: myreport.aux  myreport.blg  myreport.out  myreport.tex  myreport.toc
proj-hw3-star/: element.h  hw3-star.cpp  hw3.fs  makefile  readme.md  shader_m.h
proj-hw3-star/report/: report.md
proj-hw4-1-bezier/: CMakeLists.txt  readme.md
proj-hw4-1-bezier/report/: hw4-1-bezier.md  report.md
proj-hw4-1-bezier/source/: element.h  hw4-1-bezier.cpp
proj-hw4-2-meshlab/: CMakeLists.txt
proj-hw4-2-meshlab/report/: hw4-2-meshlab.md
proj-hw4-2-meshlab/source/: camera.cpp  camera.h  hw4-2-meshlab.cpp  meshDrawer.cpp  meshDrawer.h  objLoader.cpp  objLoader.h  offLoader.cpp  offLoader.h  plyLoader.cpp  plyLoader.h
proj-hw5-light/: CMakeLists.txt
proj-hw5-nanosuit/: CMakeLists.txt
proj-hw5-nanosuit/source/: model.h  model_loading.cpp
proj-hw5-teapot/: CMakeLists.txt
proj-hw5-teapot/report/: hw-5-teapot.md
proj-hw5-teapot/source/: camera.cpp  main.cpp  mesh.h  (+1 more)
proj-my-water-wave/: CMakeLists.txt  readme.md
test/: t.out
test-demo/: makefile
test-env-win10-freeglut/: Callbacks.cpp  Callbacks.h  Readme.md
test-env-win10-glfw/: makefile  readme.md  t.cpp
test-env-win10-vs/: readme.md
test-env-win10-wsl-demo/: ibl_irradiance_conversion.cpp  readme.md
win-freeglut/: Callbacks.cpp  Callbacks.h  Readme.md  hello.cpp  makefile
win-glfw/: makefile  readme.md  t.out  triangle.cpp
(+41 files in other folders)
